# opt2026-de

./: .gitignore  01-Grades.ipynb  01-Introduction-Class.ipynb  01-Introduction.ipynb  02-Blending.ipynb  03-Sensitivity-Analysis-Class.ipynb  03-Sensitivity-Analysis.ipynb  04-Modeling-1.ipynb  Cocktails-Algebra.ipynb  Cocktails-Duality.ipynb  Cocktails-Excel-Python.ipynb  IP-Urban-Planning.ipynb  Job-Assignment.ipynb  LP-Diet.ipynb  Lineare-Algebra.ipynb  Links.qmd  Max-Flow.ipynb  Milonga-Ex.ipynb  Power-Plants.ipynb  Prediction-Ex.ipynb  Prediction.ipynb  Production-Distribution.ipynb  _quarto.yml  _variables.yml  cell_tower-gurobi.ipynb  cell_tower.ipynb  index.qmd  power_schedule.ipynb  pyproject.toml
.github/workflows/: publish.yml
01-Python/: 01-Basics.ipynb  02-Numpy.ipynb  03-Pandas.ipynb
02-Graphical-Method/: 01-Berlin-Airlift-Class.ipynb  01-Berlin-Airlift.ipynb  02-Blending-Class.ipynb  02-Blending.ipynb  03-Sensitivity-Analysis-Class.ipynb  03-Sensitivity-Analysis.ipynb
excel/: Alloys-Solution.xlsx  Alloys.xlsx  Blending-Base.xlsx  Iron-Solved.xlsx  Iron.xlsx  cell_towers.xlsx  power-plants.xlsx
