[project]
name = "opt2026-de"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gurobipy>=13.0.1",
    "jupyter>=1.1.1",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "patsy>=1.0.2",
    "plotly>=6.5.2",
    "polytope>=0.2.5",
    "qrcode>=8.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
